tests/typecheck/good/fun1.scilexp
fun (x : Int32) =>
fun (y : Int32) => builtin add x y
