tests/typecheck/bad/fun3.scilexp
fun (x : Int32) =>
fun (y : Int54) =>  builtin add x y
